--- a/src/less/mixins/mixin-forms.less
+++ b/src/less/mixins/mixin-forms.less
@@ -77,7 +77,7 @@
 .mixin-input-size(@input-height; @padding-horizontal; @font-size; @border-radius) {
   border-radius: @border-radius;
   font-size: @font-size;
-  height: @input-height;
+  line-height: @input-height;
   padding: 0 @padding-horizontal;
 
   /*select& {
